[package]
name = "floating_bar"
version = "0.3.0"
authors = ["1011X <1011XXXXX@gmail.com>"]
edition = "2018"
description = "Representing rational numbers using the floating-bar number type."

repository = "https://github.com/1011X/floating_bar"
readme = "README.md"

keywords = ["float", "floating", "bar", "rational"]
categories = ["data-structures"]

license = "0BSD"

[dependencies]
gcd = "2.0.1"
integer-sqrt = "0.1.5"
#integer-cbrt = "0.1.2"
#safe_arch = "0.3.1"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["std"]
std = []
bench = []
denormals = []
#quiet-nan = []
#total-ord = []

[[bench]]
name = "r32_bench"
harness = false

[[bench]]
name = "r64_bench"
harness = false
